[gd_scene load_steps=3 format=3 uid="uid://bjfgvkpk5aob8"]

[ext_resource type="Script" uid="uid://cq0duth7tffbo" path="res://scripts/debug_panel.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_debug"]
bg_color = Color(0.2, 0.15, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="DebugPanel" type="PanelContainer"]
visible = false
theme_override_styles/panel = SubResource("StyleBoxFlat_debug")
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "DEBUG"

[node name="CloseButton" type="Button" parent="Margin/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="PointsButton" type="Button" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Grant 1M Points"

[node name="MaxCardButton" type="Button" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Create MAX Card"

[node name="FoilCardButton" type="Button" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Create Foil Card"
